fix_scrollbar_va_ticket

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,31 @@ html, body {
   font-weight: normal;
 }
 
+body {
+  /* width */
+  /* Track */
+  /* Handle */
+  /* Handle on hover */
+}
+
+body ::-webkit-scrollbar {
+  width: 4px;
+}
+
+body ::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px #e4e4e4;
+  border-radius: 10px;
+}
+
+body ::-webkit-scrollbar-thumb {
+  background: #9b9b9b;
+  border-radius: 10px;
+}
+
+body ::-webkit-scrollbar-thumb:hover {
+  background: #b30000;
+}
+
 .nav {
   display: flex;
   justify-content: center;
@@ -71,9 +96,9 @@ header #movieNavbar a .icon__login {
   width: 1140px;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
   z-index: 100;
-  transform: translate(33%, -85%);
+  transform: translate(-50%, -85%);
 }
 
 .ticket__content {
@@ -430,7 +455,8 @@ header #movieNavbar a .icon__login {
   .showTimes__row .colum {
     margin-bottom: 20px;
   }
-  .showTimes__row .colum-2, .showTimes__row .colum-3 {
+  .showTimes__row .colum-2,
+  .showTimes__row .colum-3 {
     width: 100%;
   }
 }
