--- a/sass/Layouts/_ticket.scss
+++ b/sass/Layouts/_ticket.scss
@@ -3,10 +3,9 @@
 
     position: absolute;
     top: 0;
-    left: 0;
+    left: 50%;
     z-index: 100;
-    
-    transform: translate(33%, -85%);
+    transform: translate(-50%, -85%);
     &__content{
         box-shadow: 0 0 10px rgba(0,0,0,.3);
         background-color: $color-white-0;
